[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Executioner/ExecutionerStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Executioner/Executioner_Idle_1.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Executioner/Mace.gd" type="Script" id=6]
[ext_resource path="res://Weapons/mace.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Executioner/Executioner_Walk_1.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Executioner/Executioner_Idle_4.png" type="Texture" id=9]
[ext_resource path="res://Enemies/Executioner/Executioner_Walk_2.png" type="Texture" id=10]
[ext_resource path="res://Enemies/Executioner/Executioner_Walk_4.png" type="Texture" id=11]
[ext_resource path="res://Enemies/Executioner/Executioner_Idle_2.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Executioner/Executioner_Walk_3.png" type="Texture" id=13]
[ext_resource path="res://Enemies/Executioner/Executioner_Idle_3.png" type="Texture" id=14]
[ext_resource path="res://Enemies/Executioner/Executioner.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
height = 10.6294

[sub_resource type="CircleShape2D" id=2]
radius = 106.424

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.707
height = 11.115

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.031
height = 10.3851

[sub_resource type="CircleShape2D" id=5]
radius = 6.87776

[node name="Executioner" type="KinematicBody2D"]
position = Vector2( 156.271, 199.176 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.46769, 6.92186 )
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.07383, 8.14325 )
shape = SubResource( 6 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
modulate = Color( 1, 1, 1, 0.180392 )
position = Vector2( 0, 7.91207 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
modulate = Color( 0.388235, 0.843137, 0.811765, 1 )
position = Vector2( -0.350342, 0.933687 )
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
position = Vector2( -0.243896, 1.0129 )
shape = SubResource( 4 )

[node name="MaceHand" type="Position2D" parent="."]
position = Vector2( 28.2843, 5.58407 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 27.2052, 6.36396 )
enabled = true
cast_to = Vector2( 5, 0 )
collide_with_areas = true

[node name="Mace" type="Area2D" parent="."]
position = Vector2( -22.3763, -0.71521 )
script = ExtResource( 6 )

[node name="MaceSprite" type="Sprite" parent="Mace"]
position = Vector2( -8.24243, 19.5078 )
scale = Vector2( 0.0896244, 0.0912615 )
texture = ExtResource( 7 )

[node name="MaceCollision" type="CollisionShape2D" parent="Mace"]
position = Vector2( -8.92467, 14.0798 )
shape = SubResource( 5 )

[node name="ExecutionerStats" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="Mace" to="Mace" method="_on_Mace_body_entered"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="SoftCollision"]
